kube-artifacts/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: pg
  name: pg
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: pg
status:
  loadBalancer: {}
