kube-artifacts/rsshub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsshub-svc
spec:
  ports:
    - name: "1200"
      port: 1200
      targetPort: 1200
  selector:
    io.kompose.service: rsshub
status:
  loadBalancer: {}
